force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/vlocity_ins__InsAsyncJobStatusNotification__e.object-meta.xml
<CustomObject>
    <description>Captures notifications that must be sent once an async job completes.</description>
    <label>InsAsyncJobStatusNotification</label>
    <pluralLabel>InsAsyncJobStatusNotifications</pluralLabel>
</CustomObject>