force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AdditionalInformation__c</fullName>
    <description>The additional information about the event.</description>
    <label>Additional Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>