force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__AsyncJobRequestId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AsyncJobRequestId__c</fullName>
    <description>The Insurance Async Bulk Request associated with the event.</description>
    <label>Insurance Async Bulk Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>