force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__AsyncJobRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AsyncJobRequestStatus__c</fullName>
    <description>The status of the Insurance Async Bulk Request.</description>
    <label>Insurance Async Bulk Request Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>