force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__InsuranceEventName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__InsuranceEventName__c</fullName>
    <description>The name of the event.</description>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>