force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__Message__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Message__c</fullName>
    <description>The message that&apos;s sent with the notification.</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>