force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__NotificationAction__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NotificationAction__c</fullName>
    <description>The name of the action that&apos;s associated with the notification.</description>
    <label>Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>