force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__NotificationTypeName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NotificationTypeName__c</fullName>
    <description>The name of the notification.</description>
    <label>Notification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>