force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ObjectId__c</fullName>
    <description>The target object for async job status notification.</description>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>