force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__Subject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Subject__c</fullName>
    <description>The subject of the asynchronous job status notification event.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>