force-app/main/default/objects/vlocity_ins__InsAsyncJobStatusNotification__e/fields/vlocity_ins__UserId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__UserId__c</fullName>
    <description>The recipients of the notification.</description>
    <label>Recipient</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>